# AI-Scraping-Stack

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  CHAT_HISTORY.md  CODE_OF_CONDUCT.md  CONTEXT_MAP.md  DEPLOY_RAILWAY.md  DEPLOY_SHARED_HOSTING.md  DEPLOY_TIMEWEB.md  Dockerfile  Makefile  README.md  README_RU.md  ROADMAP.md  ROADMAP_RU.md  SECURITY.md  UNIVERSAL_BOOTSTRAPPER_V5.md  USAGE.md  api.py  debug.py  docker-compose.yml  index.html  landing.html  landing_ru.html  providers.py  pyproject.toml  render.yaml  requirements.txt  robots.txt  sitemap.xml  skill_screenshot.md  stack.py
.github/workflows/: ci.yml  keep-alive.yml
docs/wiki/: API-Reference-RU.md  API-Reference.md  Architecture-RU.md  Architecture.md  Contributing-RU.md  Contributing.md  Deployment-RU.md  Deployment.md  Getting-Started-RU.md  Getting-Started.md  Home-RU.md  Home.md
scripts/: setup.py
skills/: skill_llm.md  skill_providers.md  skill_scrape.md  skill_synthesize.md
src/: config.py  llm.py  models.py  scraper.py  screenshot.py  sitemap.py  storage.py  synthesizer.py  vision.py
tests/: conftest.py  test_api.py  test_providers.py  test_screenshot.py  test_storage.py  test_vision.py
