[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-scraping-stack"
version = "0.3.1"
description = "6-layer intelligent web intelligence platform — Scrape, Analyze, Synthesize, See"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "scrapling>=0.4.0",
    "ollama>=0.3.0",
    "openai>=1.40.0",
]

[project.optional-dependencies]
providers = [
    "crawl4ai>=0.6.0",
    "firecrawl-py>=1.7.0",
    "scrapegraphai>=1.14.0",
    "playwright>=1.45.0",
]
mcp = [
    "fastmcp>=0.9.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
]
all = [
    "ai-scraping-stack[providers,mcp,dev]",
]

[project.scripts]
scraping-stack = "api:app"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.setuptools.packages.find]
include = ["src*"]
